feat(achievements): implement achievements system with backend and UI
- Add achievements tables to SQLite and PostgreSQL databases
- Create achievements service with unlock and check logic
- Implement achievements API routes
- Add achievements modal UI with rarity styling
- Add achievement toast notifications
- Seed initial achievements from JSON file
- Add win streak tracking for achievements
- Localize achievement names and descriptions

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -54,6 +54,9 @@
   "alert_success": "Success!",
   "alert_register_ok": "Registration successful! You can now log in.",
   "alert_login_ok": "Login successful!",
+  "ach_unlocked_title": "Achievement Unlocked!",
+  "achievements_button": "🏆 Achievements",
+  "achievements_modal_title": "Achievements",
   "saving_status": "Saving...",
   "saved_status_ok": "Saved!",
   "saved_status_error": "Save error.",
@@ -92,5 +95,284 @@
   "error_invalid_move_no_card": "Cheating is not allowed!",
   "error_invalid_move_cannot_beat": "This card can't beat the attack.",
   "error_invalid_move_wrong_rank": "You can only toss in cards of the same rank.",
-  "error_invalid_move_toss_limit": "Can't toss in more cards than the defender has."
+  "error_invalid_move_toss_limit": "Can't toss in more cards than the defender has.",
+
+  "ach_first_game_name": "Rookie",
+  "ach_first_game_desc": "Complete your first game.",
+  "ach_games_5_name": "Amateur",
+  "ach_games_5_desc": "Play 5 games.",
+  "ach_games_25_name": "Avid Player",
+  "ach_games_25_desc": "Play 25 games.",
+  "ach_games_50_name": "Durak Fan",
+  "ach_games_50_desc": "Play 50 games.",
+  "ach_games_100_name": "Regular",
+  "ach_games_100_desc": "Play 100 games.",
+  "ach_games_250_name": "Frequent Visitor",
+  "ach_games_250_desc": "Play 250 games.",
+  "ach_games_500_name": "Marathoner",
+  "ach_games_500_desc": "Play 500 games.",
+  "ach_games_1000_name": "Relentless Duelist",
+  "ach_games_1000_desc": "Play 1000 games.",
+  "ach_games_2500_name": "Table Legend",
+  "ach_games_2500_desc": "Play 2500 games.",
+  "ach_games_5000_name": "God of the Game",
+  "ach_games_5000_desc": "Play 5000 games.",
+  "ach_night_owl_name": "Night Owl",
+  "ach_night_owl_desc": "Play a game after 00:00 local time.",
+  "ach_early_bird_name": "Early Bird",
+  "ach_early_bird_desc": "Play a game before 08:00 local time.",
+  "ach_time_10h_name": "Session Master",
+  "ach_time_10h_desc": "Spend a total of 10 hours in-game.",
+  "ach_time_50h_name": "Game Addict",
+  "ach_time_50h_desc": "Spend a total of 50 hours in-game.",
+  "ach_time_100h_name": "Eternal Participant",
+  "ach_time_100h_desc": "Spend a total of 100 hours in-game.",
+  "ach_first_win_name": "First Blood",
+  "ach_first_win_desc": "Get your first victory.",
+  "ach_wins_10_name": "Serial Winner",
+  "ach_wins_10_desc": "Win 10 games.",
+  "ach_win_streak_3_name": "Winning Streak",
+  "ach_win_streak_3_desc": "Win 3 games in a row.",
+  "ach_wins_25_name": "Champion",
+  "ach_wins_25_desc": "Win 25 games.",
+  "ach_wins_100_name": "Veteran",
+  "ach_wins_100_desc": "Win 100 games.",
+  "ach_wins_250_name": "Victory Master",
+  "ach_wins_250_desc": "Win 250 games.",
+  "ach_wins_500_name": "Undefeated",
+  "ach_wins_500_desc": "Win 500 games.",
+  "ach_wins_1000_name": "Legendary Player",
+  "ach_wins_1000_desc": "Win 1000 games.",
+  "ach_flawless_victory_name": "Flawless Victory",
+  "ach_flawless_victory_desc": "Win a game without taking any cards.",
+  "ach_flawless_defense_name": "Perfect Defense",
+  "ach_flawless_defense_desc": "Win a game without taking any cards while defending.",
+  "ach_fast_win_name": "Lightning Victory",
+  "ach_fast_win_desc": "Win a game in less than 2 minutes.",
+  "ach_long_win_name": "Hard-Fought Victory",
+  "ach_long_win_desc": "Win a game that lasted more than 15 minutes.",
+  "ach_win_with_2_name": "By Two",
+  "ach_win_with_2_desc": "Win a game with only 2 cards in hand at the end.",
+  "ach_no_trump_win_name": "No Trump Win",
+  "ach_no_trump_win_desc": "Win a game without having any trump cards in hand at the end.",
+  "ach_win_vs_friend_name": "Friendship Over",
+  "ach_win_vs_friend_desc": "Win a game against a player from your friends list.",
+  "ach_win_vs_bot_name": "Bot Triumph",
+  "ach_win_vs_bot_desc": "Win a game against an AI player.",
+  "ach_win_4_player_ffa_name": "Four Corners",
+  "ach_win_4_player_ffa_desc": "Win a 4-player free-for-all game.",
+  "ach_minimalist_win_name": "Minimalist Winner",
+  "ach_minimalist_win_desc": "Win a game starting with 6 cards and ending with 0.",
+  "ach_evil_genius_win_name": "Evil Genius",
+  "ach_evil_genius_win_desc": "Win a game leaving the last opponent with a large number of cards.",
+  "ach_win_streak_5_name": "Unbeatable Streak",
+  "ach_win_streak_5_desc": "Win 5 games in a row.",
+  "ach_win_streak_10_name": "Success Wave",
+  "ach_win_streak_10_desc": "Win 10 games in a row.",
+  "ach_win_streak_20_name": "Absolute Dominator",
+  "ach_win_streak_20_desc": "Win 20 games in a row.",
+  "ach_unlucky_name": "Unlucky",
+  "ach_unlucky_desc": "Lose a game holding a trump Ace.",
+  "ach_double_loss_name": "Double Trouble",
+  "ach_double_loss_desc": "Lose a game holding two identical cards (e.g., two 6s).",
+  "ach_loss_10_name": "King of Fools",
+  "ach_loss_10_desc": "Lose 10 games.",
+  "ach_loss_50_name": "Avid Loser",
+  "ach_loss_50_desc": "Lose 50 games.",
+  "ach_loss_streak_3_name": "Hitting Rock Bottom",
+  "ach_loss_streak_3_desc": "Lose 3 games in a row.",
+  "ach_loss_streak_5_name": "Black Streak",
+  "ach_loss_streak_5_desc": "Lose 5 games in a row.",
+  "ach_disconnect_loss_name": "Absent Player",
+  "ach_disconnect_loss_desc": "Lose a game due to disconnect/exit.",
+  "ach_last_hope_loss_name": "Last Hope",
+  "ach_last_hope_loss_desc": "Lose a game being the only player left against a bot.",
+  "ach_no_moves_loss_name": "No Chances",
+  "ach_no_moves_loss_desc": "Lose a game without making any successful moves.",
+  "ach_selfless_loss_name": "Selfless",
+  "ach_selfless_loss_desc": "Lose by giving all your cards to other players (in certain modes).",
+  "ach_naive_loss_name": "Naive",
+  "ach_naive_loss_desc": "Lose after playing a card that allowed your opponent to win.",
+  "ach_last_card_loss_name": "Sacrifice",
+  "ach_last_card_loss_desc": "Lose by being the last to take all cards from the deck.",
+  "ach_abandoned_loss_name": "Left to Your Own Devices",
+  "ach_abandoned_loss_desc": "Be the only player left against two or more bots and lose.",
+  "ach_squeezed_out_name": "Squeezed Out",
+  "ach_squeezed_out_desc": "Lose by being surrounded by two or more players (in a 3+ player game).",
+  "ach_defend_6_cards_name": "Pro Defender",
+  "ach_defend_6_cards_desc": "Defend against an attack of 6 cards.",
+  "ach_defend_4_in_row_name": "Shield and Sword",
+  "ach_defend_4_in_row_desc": "Defend against an attack 4 times in a row within one game.",
+  "ach_trump_hit_name": "Trump Strike",
+  "ach_trump_hit_desc": "Beat an opponent's trump card with a higher trump.",
+  "ach_pass_3_times_name": "Pass Master",
+  "ach_pass_3_times_desc": "Successfully pass the turn 3 times in one game.",
+  "ach_pass_5_times_name": "Grand Pass Master",
+  "ach_pass_5_times_desc": "Successfully pass the turn 5 times in one game.",
+  "ach_no_attack_moves_name": "No Moves Made",
+  "ach_no_attack_moves_desc": "Make no moves in a game (if you were the attacker).",
+  "ach_risky_move_name": "Risky Move",
+  "ach_risky_move_desc": "Make a move with only one card in hand and win.",
+  "ach_bluff_master_name": "Bluff Master",
+  "ach_bluff_master_desc": "Force an opponent to take cards even though you could have defended.",
+  "ach_last_card_play_name": "Last Card Played",
+  "ach_last_card_play_desc": "End the game by playing your last card.",
+  "ach_provocate_name": "Provocateur",
+  "ach_provocate_desc": "Play a card that forces an opponent to take if they have no response.",
+  "ach_king_defense_name": "King of Defense",
+  "ach_king_defense_desc": "Defend against an attack when you have only one card left.",
+  "ach_surprise_trump_name": "Surprise Trump",
+  "ach_surprise_trump_desc": "Win a game using your last card as a trump.",
+  "ach_high_stake_attack_name": "High Stakes Attack",
+  "ach_high_stake_attack_desc": "Start an attack with your highest card (e.g., Ace) and win.",
+  "ach_defense_master_name": "Master of Defense",
+  "ach_defense_master_desc": "Perform 5 successful defenses in a row (each round).",
+  "ach_tactician_100_name": "Tactician",
+  "ach_tactician_100_desc": "Make 100 successful moves (attacks or defenses).",
+  "ach_strategist_500_name": "Strategist",
+  "ach_strategist_500_desc": "Make 500 successful moves.",
+  "ach_attack_500_name": "Attacker",
+  "ach_attack_500_desc": "Make a move (play a card) 500 times.",
+  "ach_defend_500_name": "Defender",
+  "ach_defend_500_desc": "Defend against an attack 500 times.",
+  "ach_otboy_100_name": "Otboy!",
+  "ach_otboy_100_desc": "Say \"Otboy\" 100 times.",
+  "ach_beru_100_name": "Beru!",
+  "ach_beru_100_desc": "Say \"Beru\" 100 times.",
+  "ach_hosted_game_name": "Party Host",
+  "ach_hosted_game_desc": "Create and finish a game as the host.",
+  "ach_host_10_games_name": "Organizer",
+  "ach_host_10_games_desc": "Create 10 games.",
+  "ach_host_50_games_name": "Community Member",
+  "ach_host_50_games_desc": "Create 50 games.",
+  "ach_invite_friend_game_name": "Friendly Start",
+  "ach_invite_friend_game_desc": "Invite and play a game with a friend.",
+  "ach_full_lobby_name": "Players Assembled",
+  "ach_full_lobby_desc": "Play a game with 4 full human player slots.",
+  "ach_play_with_strangers_name": "Stranger",
+  "ach_play_with_strangers_desc": "Play a game with three brand new players.",
+  "ach_chat_10_messages_name": "Dialogue",
+  "ach_chat_10_messages_desc": "Send 10 messages in the game chat.",
+  "ach_chat_100_messages_name": "Chatterbox",
+  "ach_chat_100_messages_desc": "Send 100 messages in the game chat.",
+  "ach_liked_player_name": "Sympathizer",
+  "ach_liked_player_desc": "Give a \"Like\" (or similar reaction) to another player after a game.",
+  "ach_feedback_giver_name": "Feedback Giver",
+  "ach_feedback_giver_desc": "Leave game feedback or report a bug.",
+  "ach_play_with_friend_5_name": "Follower",
+  "ach_play_with_friend_5_desc": "Play 5 games with a player you know (from friends).",
+  "ach_play_all_trumps_name": "King of Trumps",
+  "ach_play_all_trumps_desc": "Play all trump cards you had in hand in one game.",
+  "ach_no_trump_used_win_name": "No Trump Used",
+  "ach_no_trump_used_win_desc": "Win a game without using any trump cards from your hand (if you had any).",
+  "ach_double_beat_name": "Double Beat",
+  "ach_double_beat_desc": "Beat two cards with one (if possible by your rules).",
+  "ach_all_aces_beaten_name": "All Aces",
+  "ach_all_aces_beaten_desc": "Beat all 4 Aces in one game.",
+  "ach_all_kings_beaten_name": "All Kings",
+  "ach_all_kings_beaten_desc": "Beat all 4 Kings in one game.",
+  "ach_all_queens_beaten_name": "All Queens",
+  "ach_all_queens_beaten_desc": "Beat all 4 Queens in one game.",
+  "ach_all_jacks_beaten_name": "All Jacks",
+  "ach_all_jacks_beaten_desc": "Beat all 4 Jacks in one game.",
+  "ach_win_clubs_trump_name": "Clubs Crusade",
+  "ach_win_clubs_trump_desc": "Win a game when Clubs were the trump suit.",
+  "ach_win_diamonds_trump_name": "Diamonds Strike",
+  "ach_win_diamonds_trump_desc": "Win a game when Diamonds were the trump suit.",
+  "ach_win_hearts_trump_name": "Hearts Triumph",
+  "ach_win_hearts_trump_desc": "Win a game when Hearts were the trump suit.",
+  "ach_win_spades_trump_name": "Spades Shine",
+  "ach_win_spades_trump_desc": "Win a game when Spades were the trump suit.",
+  "ach_final_trump_win_name": "Final Trump",
+  "ach_final_trump_win_desc": "Win a game by beating an opponent's trump with your last card.",
+  "ach_trump_attack_name": "Trump Attack",
+  "ach_trump_attack_desc": "Start an attack with a trump card and force the opponent to take.",
+  "ach_no_trump_loss_name": "Bitter Lesson",
+  "ach_no_trump_loss_desc": "Lose a game without having any trump cards in hand.",
+  "ach_ace_in_sleeve_name": "Ace in the Sleeve",
+  "ach_ace_in_sleeve_desc": "Use an Ace for a winning move when you had only one card left.",
+  "ach_trump_ace_win_name": "Trump Fortune",
+  "ach_trump_ace_win_desc": "Receive a trump Ace at the start of the game and win.",
+  "ach_card_gentleman_name": "Card Gentleman",
+  "ach_card_gentleman_desc": "Beat a card that matches the trump suit but is not a trump card itself.",
+  "ach_streak_3_name": "Spark",
+  "ach_streak_3_desc": "Maintain a daily play streak for 3 days.",
+  "ach_streak_7_name": "Flame",
+  "ach_streak_7_desc": "Maintain a daily play streak for 7 days.",
+  "ach_streak_30_name": "Unextinguished Fire",
+  "ach_streak_30_desc": "Maintain a daily play streak for 30 days.",
+  "ach_daily_login_7_name": "Daily Ritual",
+  "ach_daily_login_7_desc": "Log into the game every day for a week.",
+  "ach_daily_login_30_name": "Monthly Pass",
+  "ach_daily_login_30_desc": "Log into the game every day for a month.",
+  "ach_login_100_days_name": "Dedication",
+  "ach_login_100_days_desc": "Log into the game on 100 separate days.",
+  "ach_perfect_10_games_name": "Perfectionist",
+  "ach_perfect_10_games_desc": "Complete 10 games without quitting or disconnecting.",
+  "ach_perfect_50_games_name": "Flawless",
+  "ach_perfect_50_games_desc": "Complete 50 games without quitting or disconnecting.",
+  "ach_collector_name": "Collector",
+  "ach_collector_desc": "Take more than 15 cards at the end of a game.",
+  "ach_evil_joke_name": "Evil Joke",
+  "ach_evil_joke_desc": "Throw the last card at an opponent to make them \"stuck\".",
+  "ach_generous_player_name": "Generous",
+  "ach_generous_player_desc": "Give an opponent 6 cards in one move.",
+  "ach_lucky_shot_name": "Lucky Shot",
+  "ach_lucky_shot_desc": "Win by making a move that had a 1% chance of success (e.g., beating a trump Ace with the last card).",
+  "ach_on_the_edge_name": "On the Edge",
+  "ach_on_the_edge_desc": "Win a game with 1 card in hand when the opponent also has 1 card.",
+  "ach_deuce_win_name": "Sent to Oblivion",
+  "ach_deuce_win_desc": "Win a game using the lowest card (2) for the final move.",
+  "ach_panicker_name": "Panicker",
+  "ach_panicker_desc": "Give away all your trump cards at the start of the game.",
+  "ach_trump_collector_name": "Trump Hoarder",
+  "ach_trump_collector_desc": "Collect all trump cards in hand in one game (if 6+ were dealt).",
+  "ach_reckless_move_name": "Reckless Move",
+  "ach_reckless_move_desc": "Play the last card that allows the opponent to win, unknowingly.",
+  "ach_miner_name": "Miner",
+  "ach_miner_desc": "Lose by taking the trump Ace last.",
+  "ach_sad_end_name": "Sad Ending",
+  "ach_sad_end_desc": "Lose a game with the last card that cannot be beaten.",
+  "ach_careful_player_name": "Careful Player",
+  "ach_careful_player_desc": "Never pass the turn for 10 games.",
+  "ach_adventurer_name": "Adventurer",
+  "ach_adventurer_desc": "Always try to pass the turn if possible for 10 games.",
+  "ach_masochist_name": "Masochist",
+  "ach_masochist_desc": "Lose 10 games in a row.",
+  "ach_true_durak_name": "True Durak",
+  "ach_true_durak_desc": "Lose a game with 20+ cards in hand.",
+  "ach_rematch_request_name": "Again!",
+  "ach_rematch_request_desc": "Initiate a \"rematch\" after losing.",
+  "ach_bot_tester_name": "Patience Tester",
+  "ach_bot_tester_desc": "Make a bot wait for your turn for more than 30 seconds.",
+  "ach_lucky_first_win_name": "Lucky Rookie",
+  "ach_lucky_first_win_desc": "Win your very first game.",
+  "ach_misplay_undo_name": "Misplay Undone",
+  "ach_misplay_undo_desc": "Make a move that was undone (if undo function exists).",
+  "ach_single_trump_loss_name": "True Loss",
+  "ach_single_trump_loss_desc": "Lose with only one trump card left.",
+  "ach_giant_attack_def_name": "Giant Attack Defense",
+  "ach_giant_attack_def_desc": "Be attacked by 6 cards in one turn and defend successfully.",
+  "ach_impenetrable_def_name": "Impenetrable Defense",
+  "ach_impenetrable_def_desc": "Play 10 consecutive games without taking any cards.",
+  "ach_perfect_hand_name": "Perfect Hand",
+  "ach_perfect_hand_desc": "Receive 5+ trumps at the start of the game and win.",
+  "ach_full_table_name": "Full Table",
+  "ach_full_table_desc": "Lay out 12 cards on the table in one turn (6 pairs).",
+  "ach_final_defense_win_name": "Durak Defense",
+  "ach_final_defense_win_desc": "Win a game by successfully defending against the final attack that could have made you the \"durak\".",
+  "ach_defeat_hard_bot_name": "Card Sage",
+  "ach_defeat_hard_bot_desc": "Defeat an AI bot with a \"hard\" difficulty level.",
+  "ach_last_draw_win_name": "Tactical Genius",
+  "ach_last_draw_win_desc": "Win a game when you were the last to draw a card from the deck.",
+  "ach_duel_master_name": "Duel Master",
+  "ach_duel_master_desc": "Play 10 one-on-one games.",
+  "ach_party_king_name": "Party King",
+  "ach_party_king_desc": "Play 10 games with three other players.",
+  "ach_virtuoso_name": "Virtuoso",
+  "ach_virtuoso_desc": "Complete a game without picking up any cards while being the attacking player.",
+  "ach_last_resort_name": "Last Resort",
+  "ach_last_resort_desc": "Make a winning move when you had no other options.",
+  "ach_through_thorns_name": "Through Thorns",
+  "ach_through_thorns_desc": "Win after taking cards from the deck twice during a single attack."
 }
