--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -54,6 +54,9 @@
   "alert_success": "Успішно!",
   "alert_register_ok": "Реєстрація успішна! Тепер можете увійти.",
   "alert_login_ok": "Вхід успішний!",
+  "ach_unlocked_title": "Досягнення розблоковано!",
+  "achievements_button": "🏆 Досягнення",
+"achievements_modal_title": "Досягнення",
   "saving_status": "Збереження...",
   "saved_status_ok": "Збережено!",
   "saved_status_error": "Помилка збереження.",
@@ -92,5 +95,284 @@
   "error_invalid_move_no_card": "Шахраювати не можна!",
   "error_invalid_move_cannot_beat": "Цією картою не можна побити.",
   "error_invalid_move_wrong_rank": "Підкидати можна лише карти того ж номіналу.",
-  "error_invalid_move_toss_limit": "Не можна підкидати більше карт, ніж є у захисника."
+  "error_invalid_move_toss_limit": "Не можна підкидати більше карт, ніж є у захисника.",
+
+  "ach_first_game_name": "Новачок",
+  "ach_first_game_desc": "Зіграти свою першу гру до кінця.",
+  "ach_games_5_name": "Аматор",
+  "ach_games_5_desc": "Зіграти 5 ігор.",
+  "ach_games_25_name": "Завзятий Гравець",
+  "ach_games_25_desc": "Зіграти 25 ігор.",
+  "ach_games_50_name": "Фанат Дурака",
+  "ach_games_50_desc": "Зіграти 50 ігор.",
+  "ach_games_100_name": "Регуляр",
+  "ach_games_100_desc": "Зіграти 100 ігор.",
+  "ach_games_250_name": "Постійний Відвідувач",
+  "ach_games_250_desc": "Зіграти 250 ігор.",
+  "ach_games_500_name": "Марафонець",
+  "ach_games_500_desc": "Зіграти 500 ігор.",
+  "ach_games_1000_name": "Невтомний Дуелянт",
+  "ach_games_1000_desc": "Зіграти 1000 ігор.",
+  "ach_games_2500_name": "Легенда Столу",
+  "ach_games_2500_desc": "Зіграти 2500 ігор.",
+  "ach_games_5000_name": "Бог Гри",
+  "ach_games_5000_desc": "Зіграти 5000 ігор.",
+  "ach_night_owl_name": "Нічний Мешканець",
+  "ach_night_owl_desc": "Зіграти гру після 00:00 за місцевим часом.",
+  "ach_early_bird_name": "Ранній Птах",
+  "ach_early_bird_desc": "Зіграти гру до 08:00 за місцевим часом.",
+  "ach_time_10h_name": "Майстер Сесій",
+  "ach_time_10h_desc": "Провести в грі сумарно 10 годин.",
+  "ach_time_50h_name": "Ігровий Залежний",
+  "ach_time_50h_desc": "Провести в грі сумарно 50 годин.",
+  "ach_time_100h_name": "Вічний Учасник",
+  "ach_time_100h_desc": "Провести в грі сумарно 100 годин.",
+  "ach_first_win_name": "Перша Кров",
+  "ach_first_win_desc": "Здобути свою першу перемогу.",
+  "ach_wins_10_name": "Серійний Переможець",
+  "ach_wins_10_desc": "Виграти 10 ігор.",
+  "ach_win_streak_3_name": "Переможний Ряд",
+  "ach_win_streak_3_desc": "Виграти 3 гри поспіль.",
+  "ach_wins_25_name": "Чемпіон",
+  "ach_wins_25_desc": "Виграти 25 ігор.",
+  "ach_wins_100_name": "Ветеран",
+  "ach_wins_100_desc": "Виграти 100 ігор.",
+  "ach_wins_250_name": "Майстер Перемог",
+  "ach_wins_250_desc": "Виграти 250 ігор.",
+  "ach_wins_500_name": "Непереможний",
+  "ach_wins_500_desc": "Виграти 500 ігор.",
+  "ach_wins_1000_name": "Легендарний Гравець",
+  "ach_wins_1000_desc": "Виграти 1000 ігор.",
+  "ach_flawless_victory_name": "Суха Перемога",
+  "ach_flawless_victory_desc": "Виграти гру, не взявши жодної карти.",
+  "ach_flawless_defense_name": "Ідеальний Захист",
+  "ach_flawless_defense_desc": "Виграти гру, не взявши жодної карти, будучи \"відбиваючим\".",
+  "ach_fast_win_name": "Блискавична Перемога",
+  "ach_fast_win_desc": "Виграти гру за менш ніж 2 хвилини.",
+  "ach_long_win_name": "Довгоочікувана Перемога",
+  "ach_long_win_desc": "Виграти гру, яка тривала більше 15 хвилин.",
+  "ach_win_with_2_name": "Від Двох",
+  "ach_win_with_2_desc": "Виграти гру, маючи на руках лише 2 карти в кінці.",
+  "ach_no_trump_win_name": "Без Козиря",
+  "ach_no_trump_win_desc": "Виграти гру, не маючи жодного козиря в кінці.",
+  "ach_win_vs_friend_name": "Перемога Над Другом",
+  "ach_win_vs_friend_desc": "Виграти гру проти гравця з вашого списку друзів.",
+  "ach_win_vs_bot_name": "Тріумф Над Ботом",
+  "ach_win_vs_bot_desc": "Виграти гру проти гравця-бота.",
+  "ach_win_4_player_ffa_name": "Чотири Кути",
+  "ach_win_4_player_ffa_desc": "Виграти гру в режимі \"4 гравці, кожен сам за себе\".",
+  "ach_minimalist_win_name": "Переможець-Мінімаліст",
+  "ach_minimalist_win_desc": "Виграти гру, починаючи з 6 карт і закінчивши з 0.",
+  "ach_evil_genius_win_name": "Злий Геній",
+  "ach_evil_genius_win_desc": "Виграти гру, залишаючи останнього супротивника з великою кількістю карт.",
+  "ach_win_streak_5_name": "Непереможний ряд",
+  "ach_win_streak_5_desc": "Виграти 5 ігор поспіль.",
+  "ach_win_streak_10_name": "Смуга Успіху",
+  "ach_win_streak_10_desc": "Виграти 10 ігор поспіль.",
+  "ach_win_streak_20_name": "Абсолютний Домінатор",
+  "ach_win_streak_20_desc": "Виграти 20 ігор поспіль.",
+  "ach_unlucky_name": "Не пощастило",
+  "ach_unlucky_desc": "Програти, маючи на руках козирного туза.",
+  "ach_double_loss_name": "Двійник",
+  "ach_double_loss_desc": "Програти, маючи на руках дві однакові карти (наприклад, дві 6-ки).",
+  "ach_loss_10_name": "Король Дураків",
+  "ach_loss_10_desc": "Програти 10 ігор.",
+  "ach_loss_50_name": "Завзятий Лузер",
+  "ach_loss_50_desc": "Програти 50 ігор.",
+  "ach_loss_streak_3_name": "На Дно",
+  "ach_loss_streak_3_desc": "Програти 3 гри поспіль.",
+  "ach_loss_streak_5_name": "Чорна Смуга",
+  "ach_loss_streak_5_desc": "Програти 5 ігор поспіль.",
+  "ach_disconnect_loss_name": "Відсутній Гравець",
+  "ach_disconnect_loss_desc": "Програти через відключення/вихід з гри.",
+  "ach_last_hope_loss_name": "Остання Надія",
+  "ach_last_hope_loss_desc": "Програти, залишившись єдиним гравцем проти бота.",
+  "ach_no_moves_loss_name": "Без шансів",
+  "ach_no_moves_loss_desc": "Програти, не зробивши жодного вдалого ходу.",
+  "ach_selfless_loss_name": "Самовідданий",
+  "ach_selfless_loss_desc": "Програти, віддавши всі свої карти іншим гравцям (у певних режимах).",
+  "ach_naive_loss_name": "Наївний",
+  "ach_naive_loss_desc": "Програти після того, як ви кинули карту, яка дозволила супернику піти.",
+  "ach_last_card_loss_name": "Жертва",
+  "ach_last_card_loss_desc": "Програти, взявши останнім усі карти з колоди.",
+  "ach_abandoned_loss_name": "Залишений на Призволяще",
+  "ach_abandoned_loss_desc": "Залишитися єдиним гравцем проти двох або більше ботів і програти.",
+  "ach_squeezed_out_name": "Затиснутий",
+  "ach_squeezed_out_desc": "Програти, будучи оточеним двома іншими гравцями (в грі на 3+ гравців).",
+  "ach_defend_6_cards_name": "Професійний Захисник",
+  "ach_defend_6_cards_desc": "Відбитися від атаки з 6 карт.",
+  "ach_defend_4_in_row_name": "Щит і Меч",
+  "ach_defend_4_in_row_desc": "Відбитися від атаки 4 рази поспіль протягом однієї гри.",
+  "ach_trump_hit_name": "Козирний Удар",
+  "ach_trump_hit_desc": "Побити козирну карту суперника вищим козирем.",
+  "ach_pass_3_times_name": "Передача",
+  "ach_pass_3_times_desc": "Успішно передати хід 3 рази за одну гру.",
+  "ach_pass_5_times_name": "Майстер Передачі",
+  "ach_pass_5_times_desc": "Успішно передати хід 5 разів за одну гру.",
+  "ach_no_attack_moves_name": "Жодного Ходу",
+  "ach_no_attack_moves_desc": "Не зробити жодного ходу за гру (якщо ви були атакуючим).",
+  "ach_risky_move_name": "Ризиковий Хід",
+  "ach_risky_move_desc": "Зробити хід, маючи лише одну карту на руках, і виграти.",
+  "ach_bluff_master_name": "Блеф Майстер",
+  "ach_bluff_master_desc": "Змусити суперника взяти карти, хоча ви могли б відбитися.",
+  "ach_last_card_play_name": "Остання Карта",
+  "ach_last_card_play_desc": "Завершити гру, побивши останню карту на руках.",
+  "ach_provocate_name": "Провокатор",
+  "ach_provocate_desc": "Кинути карту, яка змушує суперника брати, якщо він не має відповіді.",
+  "ach_king_defense_name": "Король Відбиття",
+  "ach_king_defense_desc": "Відбитися від нападу, коли у вас залишилася лише одна карта.",
+  "ach_surprise_trump_name": "Несподіваний Козир",
+  "ach_surprise_trump_desc": "Виграти гру, використовуючи останню карту як козир.",
+  "ach_high_stake_attack_name": "Висока Ставка",
+  "ach_high_stake_attack_desc": "Почати атаку з найстаршої карти на руках (наприклад, Туза) і виграти.",
+  "ach_defense_master_name": "Майстер Оборони",
+  "ach_defense_master_desc": "Провести 5 успішних оборон поспіль (кожен раунд).",
+  "ach_tactician_100_name": "Тактик",
+  "ach_tactician_100_desc": "Зробити 100 успішних ходів (атак або відбоїв).",
+  "ach_strategist_500_name": "Стратег",
+  "ach_strategist_500_desc": "Зробити 500 успішних ходів.",
+  "ach_attack_500_name": "Атакуючий",
+  "ach_attack_500_desc": "Зробити хід (кинути карту) 500 разів.",
+  "ach_defend_500_name": "Захисник",
+  "ach_defend_500_desc": "Відбитися від атаки 500 разів.",
+  "ach_otboy_100_name": "Відбій!",
+  "ach_otboy_100_desc": "Сказати \"Відбій\" 100 разів.",
+  "ach_beru_100_name": "Беру!",
+  "ach_beru_100_desc": "Сказати \"Беру\" 100 разів.",
+  "ach_hosted_game_name": "Господар Вечірки",
+  "ach_hosted_game_desc": "Створити гру та довести її до кінця як хост.",
+  "ach_host_10_games_name": "Організатор",
+  "ach_host_10_games_desc": "Створити 10 ігор.",
+  "ach_host_50_games_name": "Спільнотник",
+  "ach_host_50_games_desc": "Створити 50 ігор.",
+  "ach_invite_friend_game_name": "Дружній Початок",
+  "ach_invite_friend_game_desc": "Запросити та зіграти гру з другом.",
+  "ach_full_lobby_name": "Гравці в Зборі",
+  "ach_full_lobby_desc": "Зіграти гру з 4 повними місцями (всі гравці - люди).",
+  "ach_play_with_strangers_name": "Незнайомець",
+  "ach_play_with_strangers_desc": "Зіграти гру з трьома абсолютно новими гравцями.",
+  "ach_chat_10_messages_name": "Діалог",
+  "ach_chat_10_messages_desc": "Надіслати 10 повідомлень у чаті гри.",
+  "ach_chat_100_messages_name": "Болтун",
+  "ach_chat_100_messages_desc": "Надіслати 100 повідомлень у чаті гри.",
+  "ach_liked_player_name": "Симпатик",
+  "ach_liked_player_desc": "Поставити \"Лайк\" (або аналогічну реакцію) іншому гравцеві після гри.",
+  "ach_feedback_giver_name": "Відгук",
+  "ach_feedback_giver_desc": "Залишити відгук про гру або повідомити про помилку.",
+  "ach_play_with_friend_5_name": "Послідовник",
+  "ach_play_with_friend_5_desc": "Зіграти 5 ігор з гравцем, якого ви знаєте (з друзями).",
+  "ach_play_all_trumps_name": "Король Козирів",
+  "ach_play_all_trumps_desc": "Зіграти всі козирі, які були на руках, за одну гру.",
+  "ach_no_trump_used_win_name": "Без Козирів",
+  "ach_no_trump_used_win_desc": "Виграти гру, не використовуючи жодного козиря зі своєї руки (якщо вони були).",
+  "ach_double_beat_name": "Двійності",
+  "ach_double_beat_desc": "Побити дві карти однією (якщо таке можливо у ваших правилах).",
+  "ach_all_aces_beaten_name": "Всі Тузи",
+  "ach_all_aces_beaten_desc": "Побити всі 4 тузи в одній грі.",
+  "ach_all_kings_beaten_name": "Всі Королі",
+  "ach_all_kings_beaten_desc": "Побити всі 4 королі в одній грі.",
+  "ach_all_queens_beaten_name": "Всі Дами",
+  "ach_all_queens_beaten_desc": "Побити всі 4 дами в одній грі.",
+  "ach_all_jacks_beaten_name": "Всі Валети",
+  "ach_all_jacks_beaten_desc": "Побити всі 4 валети в одній грі.",
+  "ach_win_clubs_trump_name": "Хрестовий Похід",
+  "ach_win_clubs_trump_desc": "Виграти гру, коли козирною мастю були хрести.",
+  "ach_win_diamonds_trump_name": "Бубновий Удар",
+  "ach_win_diamonds_trump_desc": "Виграти гру, коли козирною мастю були бубни.",
+  "ach_win_hearts_trump_name": "Чирвовий Тріумф",
+  "ach_win_hearts_trump_desc": "Виграти гру, коли козирною мастю були чирви.",
+  "ach_win_spades_trump_name": "Піковий Блиск",
+  "ach_win_spades_trump_desc": "Виграти гру, коли козирною мастю були піки.",
+  "ach_final_trump_win_name": "Фінальний Козир",
+  "ach_final_trump_win_desc": "Виграти гру, побивши останньою картою козиря суперника.",
+  "ach_trump_attack_name": "Козирна Атака",
+  "ach_trump_attack_desc": "Почати атаку з козирної карти і змусити суперника взяти.",
+  "ach_no_trump_loss_name": "Гіркий Урок",
+  "ach_no_trump_loss_desc": "Програти, не маючи жодного козиря на руках.",
+  "ach_ace_in_sleeve_name": "Туз у Рукаві",
+  "ach_ace_in_sleeve_desc": "Використати Туза для виграшного ходу, коли у вас залишилася одна карта.",
+  "ach_trump_ace_win_name": "Козирна Фортуна",
+  "ach_trump_ace_win_desc": "Отримати козирного Туза на початку гри і виграти.",
+  "ach_card_gentleman_name": "Картовий Джентльмен",
+  "ach_card_gentleman_desc": "Відбити хід карти, що відповідає масті козиря, але не є козирем.",
+  "ach_streak_3_name": "Вогник",
+  "ach_streak_3_desc": "Підтримати щоденну серію гри протягом 3 днів.",
+  "ach_streak_7_name": "Полум'я",
+  "ach_streak_7_desc": "Підтримати щоденну серію гри протягом 7 днів.",
+  "ach_streak_30_name": "Негаснучий Вогонь",
+  "ach_streak_30_desc": "Підтримати щоденну серію гри протягом 30 днів.",
+  "ach_daily_login_7_name": "Щоденний Ритуал",
+  "ach_daily_login_7_desc": "Увійти в гру кожен день протягом тижня.",
+  "ach_daily_login_30_name": "Місячний Абонемент",
+  "ach_daily_login_30_desc": "Увійти в гру кожен день протягом місяця.",
+  "ach_login_100_days_name": "Відданість",
+  "ach_login_100_days_desc": "Увійти в гру протягом 100 окремих днів.",
+  "ach_perfect_10_games_name": "Перфекціоніст",
+  "ach_perfect_10_games_desc": "Завершити 10 ігор без виходу чи відключення.",
+  "ach_perfect_50_games_name": "Бездоганний",
+  "ach_perfect_50_games_desc": "Завершити 50 ігор без виходу чи відключення.",
+  "ach_collector_name": "Колекціонер",
+  "ach_collector_desc": "Взяти в кінці гри більше 15 карт.",
+  "ach_evil_joke_name": "Злий Жарт",
+  "ach_evil_joke_desc": "Підкинути супернику останню карту, щоб він \"завис\".",
+  "ach_generous_player_name": "Щедрий",
+  "ach_generous_player_desc": "Подарувати супернику 6 карт за один хід.",
+  "ach_lucky_shot_name": "Фартовий",
+  "ach_lucky_shot_desc": "Виграти, зробивши хід, який мав 1% шансів на успіх (наприклад, побити козирного туза останньою картою).",
+  "ach_on_the_edge_name": "На Межі",
+  "ach_on_the_edge_desc": "Виграти гру, маючи на руках 1 карту, коли суперник теж має 1 карту.",
+  "ach_deuce_win_name": "Надіслано Куди Подалі",
+  "ach_deuce_win_desc": "Виграти гру, використовуючи найнижчу карту (2) для останнього ходу.",
+  "ach_panicker_name": "Панікер",
+  "ach_panicker_desc": "Віддати всі свої козирі на початку гри.",
+  "ach_trump_collector_name": "Скарбниця",
+  "ach_trump_collector_desc": "Зібрати всі козирі на руках за одну гру (якщо було 6+).",
+  "ach_reckless_move_name": "Безрозсудний",
+  "ach_reckless_move_desc": "Кинути останню карту, яка дозволяє супернику виграти, не розуміючи цього.",
+  "ach_miner_name": "Мінер",
+  "ach_miner_desc": "Програти, взявши останнім саме козирного туза.",
+  "ach_sad_end_name": "Сумний Кінець",
+  "ach_sad_end_desc": "Програти гру з останньою картою, яка не може бути побита.",
+  "ach_careful_player_name": "Обережний Гравець",
+  "ach_careful_player_desc": "Ніколи не передавати хід протягом 10 ігор.",
+  "ach_adventurer_name": "Авантюрист",
+  "ach_adventurer_desc": "Завжди намагатися передати хід, якщо є можливість, протягом 10 ігор.",
+  "ach_masochist_name": "Мазохіст",
+  "ach_masochist_desc": "Програти 10 ігор поспіль.",
+  "ach_true_durak_name": "Справжній Дурак",
+  "ach_true_durak_desc": "Програти гру, маючи 20+ карт на руках.",
+  "ach_rematch_request_name": "Ще раз!",
+  "ach_rematch_request_desc": "Запустити \"реванш\" після програшу.",
+  "ach_bot_tester_name": "Випробовувач Терпіння",
+  "ach_bot_tester_desc": "Змусити бота чекати вашого ходу довше 30 секунд.",
+  "ach_lucky_first_win_name": "Щасливий Новачок",
+  "ach_lucky_first_win_desc": "Виграти першу ж гру.",
+  "ach_misplay_undo_name": "Помилковий Хід",
+  "ach_misplay_undo_desc": "Зробити хід, який був скасований (якщо є функція скасування).",
+  "ach_single_trump_loss_name": "Справжній Програш",
+  "ach_single_trump_loss_desc": "Програти, залишившись з одним козирем.",
+  "ach_giant_attack_def_name": "Гігантський Напад",
+  "ach_giant_attack_def_desc": "Бути атакованим 6 картами за один хід і відбитися.",
+  "ach_impenetrable_def_name": "Неперевершений Захист",
+  "ach_impenetrable_def_desc": "Провести 10 ігор поспіль, не взявши жодної карти.",
+  "ach_perfect_hand_name": "Ідеальна Рука",
+  "ach_perfect_hand_desc": "Отримати на початку гри 5+ козирів і виграти.",
+  "ach_full_table_name": "Повний Стіл",
+  "ach_full_table_desc": "Розкласти на столі 12 карт за один хід (6 пар).",
+  "ach_final_defense_win_name": "Відбій від \"Дурака\"",
+  "ach_final_defense_win_desc": "Виграти гру, успішно відбившись від фінальної атаки, яка могла зробити вас \"дураком\".",
+  "ach_defeat_hard_bot_name": "Картярський Мудрець",
+  "ach_defeat_hard_bot_desc": "Перемогти бота, який має \"складний\" рівень складності.",
+  "ach_last_draw_win_name": "Тактичний Геній",
+  "ach_last_draw_win_desc": "Виграти гру, коли ви останнім отримали карту з колоди.",
+  "ach_duel_master_name": "Майстер Дуелей",
+  "ach_duel_master_desc": "Зіграти 10 ігор один на один.",
+  "ach_party_king_name": "Король Компанії",
+  "ach_party_king_desc": "Зіграти 10 ігор з трьома іншими гравцями.",
+  "ach_virtuoso_name": "Віртуоз",
+  "ach_virtuoso_desc": "Завершити гру, не підібравши жодної карти, будучи атакувальним гравцем.",
+  "ach_last_resort_name": "Остання Надія",
+  "ach_last_resort_desc": "Зробити виграшний хід, коли у вас не було інших варіантів.",
+  "ach_through_thorns_name": "Крізь Терни",
+  "ach_through_thorns_desc": "Перемогти після того, як ви двічі брали карти з колоди під час однієї атаки."
 }
