feat(admin): add admin authentication and user management
- Implement admin routes with user listing functionality
- Add authentication middleware for admin and regular users
- Add is_admin column to users table in both SQLite and PostgreSQL
- Include admin status in session data
- Add i18n error messages for unauthorized and forbidden cases

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -96,6 +96,8 @@
   "error_invalid_move_cannot_beat": "This card can't beat the attack.",
   "error_invalid_move_wrong_rank": "You can only toss in cards of the same rank.",
   "error_invalid_move_toss_limit": "Can't toss in more cards than the defender has.",
+  "error_unauthorized": "Unauthorized. Please log in.",
+  "error_forbidden_admin_only": "Forbidden. Administrator access only.",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
