feat(auth): implement user banning system with i18n support
- Add ban functionality for administrators including:
- Database schema changes for ban status and reason
- Middleware checks for banned users
- Socket.io integration to disconnect banned users
- Admin API endpoints for banning/unbanning
- Localization support for ban messages
- Client-side handling of ban notifications

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -98,6 +98,8 @@
   "error_invalid_move_toss_limit": "Can't toss in more cards than the defender has.",
   "error_unauthorized": "Unauthorized. Please log in.",
   "error_forbidden_admin_only": "Forbidden. Administrator access only.",
+  "error_account_banned_with_reason": "Your account has been banned. Reason: {{reason}}",
+  "ban_reason_not_specified": "Reason not specified",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
