--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -100,6 +100,10 @@
   "error_forbidden_admin_only": "Forbidden. Administrator access only.",
   "error_account_banned_with_reason": "Your account has been banned. Reason: {{reason}}",
   "ban_reason_not_specified": "Reason not specified",
+  "error_chat_muted": "You cannot send messages, your chat has been muted.",
+  "chat_placeholder_muted": "Chat muted by administrator",
+  "info_you_are_muted": "Your chat has been muted by an administrator.",
+  "info_mute_lifted": "Chat restrictions have been lifted.",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
